[metadata]
name = open-math-utils
version = 0.0.1
author = Hooman Bud
author_email = hoom.bid@gmail.com
description = Simple math utilities
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/HoomanBud/OpenMathUtils
classifiers = [
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
]

[options]
package = find:
python_requires = >=3.7
include_package_data = True